// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoDataCard props button 1`] = `
<div
  class="css-qvyf25-redirectAppLinksStyles"
  data-test-subj="kbnRedirectAppLink"
>
  <section
    class="emotion-euiPageSection-grow-l-center-transparent"
  >
    <div
      class="emotion-euiPageSection__content-l-center"
    >
      <div
        class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical"
        data-test-subj="noDataCard"
        style="max-width:400px"
      >
        <div
          class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
        >
          <div
            class="euiEmptyPrompt__icon emotion-euiEmptyPrompt__icon-vertical"
          >
            <img
              alt="Elastic Agent illustration"
              data-test-subj="ElasticAgentIllustration"
              height="92"
              src="test-file-stub"
              width="140"
            />
          </div>
          <div
            class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
          >
            <h2
              class="euiTitle euiTitle emotion-euiTitle-m-euiTitle-m"
            >
              Card title
            </h2>
            <div
              class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
            />
            <div
              class="euiText emotion-euiText-m-euiTextColor-subdued"
            >
              <p>
                Description
              </p>
            </div>
            <div
              class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
            />
            <a
              class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
              data-test-subj="kbnOverviewAddIntegrations"
              href="/app/integrations/browse"
              rel="noreferrer"
            >
              <span
                class="emotion-euiButtonDisplayContent"
              >
                <span
                  class="eui-textTruncate"
                >
                  Button
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="euiEmptyPrompt__footer emotion-euiEmptyPrompt__footer-l-plain"
        >
          <span
            class="euiTitle emotion-euiTitle-xxs"
          >
            Want to learn more?
          </span>
           
          <a
            class="euiLink emotion-euiLink-primary"
            href="https://www.elastic.co/kibana"
            rel="noopener noreferrer"
            target="_blank"
          >
            Read the docs
            <span
              class="emotion-EuiExternalLinkIcon"
              data-euiicon-type="popout"
              role="presentation"
            />
            <span
              class="emotion-euiScreenReaderOnly"
            >
              (external, opens in a new tab or window)
            </span>
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`NoDataCard props extends EuiCardProps 1`] = `
<div
  class="css-qvyf25-redirectAppLinksStyles"
  data-test-subj="kbnRedirectAppLink"
>
  <section
    class="emotion-euiPageSection-grow-l-center-transparent"
  >
    <div
      class="emotion-euiPageSection__content-l-center"
    >
      <div
        class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical"
        data-test-subj="noDataCard"
        style="max-width:400px"
      >
        <div
          class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
        >
          <div
            class="euiEmptyPrompt__icon emotion-euiEmptyPrompt__icon-vertical"
          >
            <img
              alt="Elastic Agent illustration"
              data-test-subj="ElasticAgentIllustration"
              height="92"
              src="test-file-stub"
              width="140"
            />
          </div>
          <div
            class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
          >
            <h2
              class="euiTitle euiTitle emotion-euiTitle-m-euiTitle-m"
            >
              Card title
            </h2>
            <div
              class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
            />
            <div
              class="euiText emotion-euiText-m-euiTextColor-subdued"
            >
              <p>
                Description
              </p>
            </div>
            <div
              class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
            />
            <a
              class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
              data-test-subj="kbnOverviewAddIntegrations"
              href="/app/integrations/browse"
              rel="noreferrer"
            >
              <span
                class="emotion-euiButtonDisplayContent"
              >
                <span
                  class="eui-textTruncate"
                >
                  Button
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="euiEmptyPrompt__footer emotion-euiEmptyPrompt__footer-l-plain"
        >
          <span
            class="euiTitle emotion-euiTitle-xxs"
          >
            Want to learn more?
          </span>
           
          <a
            class="euiLink emotion-euiLink-primary"
            href="https://www.elastic.co/kibana"
            rel="noopener noreferrer"
            target="_blank"
          >
            Read the docs
            <span
              class="emotion-EuiExternalLinkIcon"
              data-euiicon-type="popout"
              role="presentation"
            />
            <span
              class="emotion-euiScreenReaderOnly"
            >
              (external, opens in a new tab or window)
            </span>
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`NoDataCard props href 1`] = `
<div
  class="css-qvyf25-redirectAppLinksStyles"
  data-test-subj="kbnRedirectAppLink"
>
  <section
    class="emotion-euiPageSection-grow-l-center-transparent"
  >
    <div
      class="emotion-euiPageSection__content-l-center"
    >
      <div
        class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical"
        data-test-subj="noDataCard"
        style="max-width:400px"
      >
        <div
          class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
        >
          <div
            class="euiEmptyPrompt__icon emotion-euiEmptyPrompt__icon-vertical"
          >
            <img
              alt="Elastic Agent illustration"
              data-test-subj="ElasticAgentIllustration"
              height="92"
              src="test-file-stub"
              width="140"
            />
          </div>
          <div
            class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
          >
            <h2
              class="euiTitle euiTitle emotion-euiTitle-m-euiTitle-m"
            >
              Card title
            </h2>
            <div
              class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
            />
            <div
              class="euiText emotion-euiText-m-euiTextColor-subdued"
            >
              <p>
                Description
              </p>
            </div>
            <div
              class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
            />
            <a
              class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
              data-test-subj="kbnOverviewAddIntegrations"
              href="#"
              rel="noreferrer"
            >
              <span
                class="emotion-euiButtonDisplayContent"
              >
                <span
                  class="eui-textTruncate"
                >
                  Button
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="euiEmptyPrompt__footer emotion-euiEmptyPrompt__footer-l-plain"
        >
          <span
            class="euiTitle emotion-euiTitle-xxs"
          >
            Want to learn more?
          </span>
           
          <a
            class="euiLink emotion-euiLink-primary"
            href="https://www.elastic.co/kibana"
            rel="noopener noreferrer"
            target="_blank"
          >
            Read the docs
            <span
              class="emotion-EuiExternalLinkIcon"
              data-euiicon-type="popout"
              role="presentation"
            />
            <span
              class="emotion-euiScreenReaderOnly"
            >
              (external, opens in a new tab or window)
            </span>
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`NoDataCard props no access to Fleet 1`] = `
<div
  class="css-qvyf25-redirectAppLinksStyles"
  data-test-subj="kbnRedirectAppLink"
>
  <section
    class="emotion-euiPageSection-grow-l-center-transparent"
  >
    <div
      class="emotion-euiPageSection__content-l-center"
    >
      <div
        class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical"
        data-test-subj="noDataCard"
        style="max-width:400px"
      >
        <div
          class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
        >
          <div
            class="euiEmptyPrompt__icon emotion-euiEmptyPrompt__icon-vertical"
          >
            <img
              alt="Elastic Agent illustration"
              data-test-subj="ElasticAgentIllustration"
              height="92"
              src="test-file-stub"
              width="140"
            />
          </div>
          <div
            class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
          >
            <h2
              class="euiTitle euiTitle emotion-euiTitle-m-euiTitle-m"
            >
              Contact your administrator
            </h2>
            <div
              class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
            />
            <div
              class="euiText emotion-euiText-m-euiTextColor-subdued"
            >
              <p>
                This integration is not yet enabled. Your administrator has the required permissions to turn it on.
              </p>
            </div>
          </div>
        </div>
        <div
          class="euiEmptyPrompt__footer emotion-euiEmptyPrompt__footer-l-plain"
        >
          <span
            class="euiTitle emotion-euiTitle-xxs"
          >
            Want to learn more?
          </span>
           
          <a
            class="euiLink emotion-euiLink-primary"
            href="https://www.elastic.co/kibana"
            rel="noopener noreferrer"
            target="_blank"
          >
            Read the docs
            <span
              class="emotion-EuiExternalLinkIcon"
              data-euiicon-type="popout"
              role="presentation"
            />
            <span
              class="emotion-euiScreenReaderOnly"
            >
              (external, opens in a new tab or window)
            </span>
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`NoDataCard renders 1`] = `
<div
  class="css-qvyf25-redirectAppLinksStyles"
  data-test-subj="kbnRedirectAppLink"
>
  <section
    class="emotion-euiPageSection-grow-l-center-transparent"
  >
    <div
      class="emotion-euiPageSection__content-l-center"
    >
      <div
        class="euiPanel euiPanel--plain euiEmptyPrompt emotion-euiPanel-m-plain-hasShadow-euiEmptyPrompt-vertical"
        data-test-subj="noDataCard"
        style="max-width:400px"
      >
        <div
          class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
        >
          <div
            class="euiEmptyPrompt__icon emotion-euiEmptyPrompt__icon-vertical"
          >
            <img
              alt="Elastic Agent illustration"
              data-test-subj="ElasticAgentIllustration"
              height="92"
              src="test-file-stub"
              width="140"
            />
          </div>
          <div
            class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
          >
            <h2
              class="euiTitle euiTitle emotion-euiTitle-m-euiTitle-m"
            >
              Card title
            </h2>
            <div
              class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
            />
            <div
              class="euiText emotion-euiText-m-euiTextColor-subdued"
            >
              <p>
                Description
              </p>
            </div>
            <div
              class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
            />
            <a
              class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
              data-test-subj="kbnOverviewAddIntegrations"
              href="/app/integrations/browse"
              rel="noreferrer"
            >
              <span
                class="emotion-euiButtonDisplayContent"
              >
                <span
                  class="eui-textTruncate"
                >
                  Browse integrations
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="euiEmptyPrompt__footer emotion-euiEmptyPrompt__footer-l-plain"
        >
          <span
            class="euiTitle emotion-euiTitle-xxs"
          >
            Want to learn more?
          </span>
           
          <a
            class="euiLink emotion-euiLink-primary"
            href="https://www.elastic.co/kibana"
            rel="noopener noreferrer"
            target="_blank"
          >
            Read the docs
            <span
              class="emotion-EuiExternalLinkIcon"
              data-euiicon-type="popout"
              role="presentation"
            />
            <span
              class="emotion-euiScreenReaderOnly"
            >
              (external, opens in a new tab or window)
            </span>
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;
